gccida/c3/do_output_reload
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_output_reload/src/reload1.c:7413:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)old), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_output_reload/src/reload1.c:7413:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)old), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_output_reload/src/reload1.c:7419:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 6967, "do_output_reload"); 
              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_output_reload/src/obj/reload1.o] Error 1
